# parallely

./: .coveragerc  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
.github/workflows/: tox.yml
dev/: check-tabs.sh
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  overview.doctree  reference.doctree
docs/_build/html/: objects.inv
parallely/: __init__.py  base.py  coroutines.py  processes.py  threads.py
tests/: test_threads.py
